[package]
authors = [ "joern.barthel@kreuzwerker.de" ]
description = "runt is a simple commandline utility to make configuration files executable"
edition = "2021"
license = "MIT"
name = "runt"
version = "1.0.0"

[dev-dependencies]
assert_cmd = "2.0.2"
assert_fs = "1.0.6"
escargot = "0.5.6"
indoc = "1.0.3"
lazy_static = "1.4.0"
predicates = "2.1.0"

[dependencies]
anyhow = "1.0.48"
clap = { version = "3.0.0-beta.5", default-features = false, features = [ "cargo", "std" ] }
env_logger = "0.9.0"
log = "0.4.14"
tempfile = "3.2.0"
